<resources>
    <string name="app_name">小西</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">功能</string>
    <string name="title_notifications">我的</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scrolling">西南财经大学</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="btnlogin_label">登录</string>
    <string name="btnregi_label">注册</string>
    <string name="xueyuan_label">学院介绍</string>
    <string name="xuexiao_label">学校介绍</string>
    <string name="社团组织" />
    <string name="shetuan_label">社团组织</string>
    <string name="huodong_label">校园活动</string>
    <string name="userid_label">用户Id</string>
    <string name="userpwd_label">请输入密码</string>
</resources>
